src/styles/components/_journal.scss
.journal__main-content {
    display: flex;
}

.journal__sidebar {
    background-color: $dark-gray;
    color: $white;
    display: flex;
    flex-direction: column;
    height: 100vh;
    padding: 0 10px;
    width: 450px;
}

.journal__sidebar-navbar {
    display: flex;
    justify-content: space-between;

    h3 {
        font-weight: lighter;
    }
}

.journal__new-entry {
    user-select: none;
    align-items: center;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 30px;
    width: 100%;
    transition: color 0.2s ease;

    &:hover {
        color: darken($color: $white, $amount: 15);
    }
}

.journal__entries {
    flex: 1 1 auto;
    margin-top: 30px;
    overflow-y: scroll;
    &::-webkit-scrollbar {
        width: 8px;
    }

    &::-webkit-scrollbar-track {
        background-color: $white;
        border-radius: 4px;
    }

    &::-webkit-scrollbar-thumb {
        background-color: $light-gray;
        border-radius: 4px;
    }
}

.journal__entry {
    background-color: white;
    border-radius: 4px;
    color: $dark-gray;
    display: flex;
    margin-bottom: 10px;
    margin-right: 3px;
    overflow: hidden;
}

.journal__entry-picture {
    height: 75px;
    width: 75px;
}

.journal__entry-body {
    padding: 10px;
}

.journal__entry-title {
    font-size: 14px;
    font-weight: bold;
}

.journal__entry-content {
    font-size: 10px;
}

.journal__entry-date-box {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 5px;

    span {
        font-size: 12px;
    }
}

